	* Incremented the package version to 0.11.2.
2016-03-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed various bugs that broke the build under RHEL 5.
2016-03-22 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 4:2:1.
	* Incremented the package version to 0.11.3.
2016-04-06 Fred Gleason <fredg@paravelsystems.com>
	* Added 'SyLwrpClient::timeoutInterval()' and
	'SyLwrpClient::setTimeoutInterval()' methods in
	'sy/sylwpr_client.cpp' and 'sy/sylwpr_client.h'.
2016-04-06 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 5:0:2.
	* Incremented the package version to 0.11.4.
2016-05-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the 'SyMcastSocket::bind()' methods in
	'sy/symcastsocket.cpp' that caused the process to exit if the
	bind() call failed.
2016-05-11 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 5:1:2.
	* Incremented the package version to 0.11.5.
2016-12-07 Fred Gleason <fredg@paravelsystems.com>
	* Added support for a 'SWITCHYARD_SUPPRESS_DEBUG' environmental
	variable.
2016-12-07 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 5:2:2.
	* Incremented the package version to 0.11.6.
2016-12-07 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/sysyslog.cpp' that broke the build on
	RHEL 6.
2016-12-07 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 5:3:2.
	* Incremented the package version to 0.11.7.
2016-12-13 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyGpioEvent' class in 'src/sy/sygpio_server.cpp' and
	'src/sy/sygpio_server.h'.
	* Added a 'SyGpioServer::gpioReceived()' signal in
	'src/sy/sygpio_server.cpp' and 'src/sy/sygpio_server.h'.
	* Refactored gpio_test(1) to use the 'SyGpioServer::gpioReceived()'
	signal in 'tests/gpio_test.cpp' and 'tests/gpio_test.h'.
2016-12-13 Fred Gleason <fredg@paravelsystems.com>
	* Added a '--log' switch to sygpiotest(1).