@@ -468,3 +468,5 @@
 	signal in 'tests/gpio_test.cpp' and 'tests/gpio_test.h'.
 2016-12-13 Fred Gleason <fredg@paravelsystems.com>
 	* Added a '--log' switch to sygpiotest(1).
+2016-12-13 Fred Gleason <fredg@paravelsystems.com>
+	* Added sygpiotest(1) to the set of installed programs.
